--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Arthur Karlin</title>
 </head>
 <body>
     Arthur Karlin
-    <div class="container">
-        <iframe width="560" src="https://www.youtube.com/watch?v=Se497gGgyPo"></iframe>
+    <iframe width="560" height="315"
+    src="https://www.youtube.com/embed/Se497gGgyPo" 
+    frameborder="0" 
+    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
+    allowfullscreen></iframe>
       </div>
 </body>
 </html>
