--- a/index.html
+++ b/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        body {
+            background-color: lightblue;
+        }
+
+        h1 {
+            color: navy;
+            text-align: center;
+        }
+
+        .container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 4px;
+        }
+    </style>
     <title>Arthur Karlin</title>
 </head>
+
 <body>
     Arthur Karlin
-    <iframe width="560" height="315"
-    src="https://www.youtube.com/embed/Se497gGgyPo" 
-    frameborder="0" 
-    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
-    allowfullscreen></iframe>
-      </div>
+    </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Se497gGgyPo" frameborder="0"
+        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
 </body>
+
 </html>
