--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
-            background-color: lightblue;
+            background-color: white;
         }
 
         h1 {
@@ -26,8 +26,8 @@
 </head>
 
 <body>
-    Arthur Karlin
-    </div>
+    <h1>Arthur Karlin</h1>
+</div class="container">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/Se497gGgyPo" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
