--- a/index.html
+++ b/index.html
@@ -4,15 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>Arthur Karlin</title>
 </head>
 
 <body>
-    <h1>Arthur Karlin</h1>
-</div class="container">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Se497gGgyPo" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+
+            </div>
+            <div class="col">
+                <figure class="text-center">
+                    <h1>Arthur Karlin</h1>
+                </figure>
+
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Se497gGgyPo?&theme=dark&autohide=2&modestbranding=1&showinfo=0"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                </iframe>
+                <iframe src="program.pdf#toolbar=0&view=fitH" width="100%" height="850px"></iframe>
+            </div>
+            <div class="col">
+
+            </div>
+
+        </div>
     </div>
 </body>
 
