--- a/index.html
+++ b/index.html
@@ -16,16 +16,12 @@
 
             </div>
             <div class="col">
-                <figure class="text-center">
-                    <h1>Arthur Karlin</h1>
-                </figure>
-
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/Se497gGgyPo?&theme=dark&autohide=2&modestbranding=1&showinfo=0"
-                    title="YouTube video player" frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
-                </iframe>
-                <iframe src="program.pdf#toolbar=0&view=fitH" width="100%" height="850px"></iframe>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" width="560" height="315"
+                        src="https://www.youtube.com/embed/Se497gGgyPo?rel=0" allowfullscreen>
+                    </iframe>
+                </div>
+                <iframe src="program.pdf#toolbar=0&view=fitH" width="100%" height="840px"></iframe>
             </div>
             <div class="col">
 
