--- a/index.html
+++ b/index.html
@@ -10,23 +10,16 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
+            <div class="col"></div>
             <div class="col">
-
-            </div>
-            <div class="col">
-                <div class="embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" width="560" height="315"
-                        src="https://www.youtube.com/embed/Se497gGgyPo?rel=0" allowfullscreen>
-                    </iframe>
+                <div class="ratio ratio-16x9">
+                    <iframe src="https://www.youtube.com/embed/Se497gGgyPo?rel=0" allowfullscreen></iframe>
                 </div>
                 <iframe src="program.pdf#toolbar=0&view=fitH" width="100%" height="840px"></iframe>
             </div>
-            <div class="col">
-
-            </div>
-
+            <div class="col"></div>
         </div>
     </div>
 </body>
