--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <style>
+        .carousel-control-next,
+        .carousel-control-prev,
+        .carousel-indicators {
+            filter: invert(100%);
+        }
+    </style>
     <title>Arthur Karlin</title>
 </head>
 
@@ -14,14 +21,56 @@
         <div class="row">
             <div class="col"></div>
             <div class="col">
+
+                <div id="carouselExampleIndicators" class="carousel slide">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="program_Page_1.png" class="d-block w-100" alt="Page 1">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="program_Page_2.png" class="d-block w-100" alt="Page 2">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="program_Page_3.png" class="d-block w-100" alt="Page 3">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="program_Page_4.png" class="d-block w-100" alt="Page 4">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+
                 <div class="ratio ratio-16x9">
                     <iframe src="https://www.youtube.com/embed/Se497gGgyPo?rel=0" allowfullscreen></iframe>
                 </div>
-                <iframe src="program.pdf#toolbar=0&view=fitH" width="100%" height="840px"></iframe>
+
+                <p class="text-center"><a href="program.pdf">Download Program</a></p>
             </div>
             <div class="col"></div>
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
