--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             filter: invert(100%);
         }
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Arthur Karlin</title>
 </head>
 
