--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col"></div>
-            <div class="col">
-
+            <div class="col-6">
                 <div id="carouselExampleIndicators" class="carousel slide" data-bs-interval="false">
                     <div class="carousel-indicators">
                         <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
